--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "big-integer": "^1.6.51",
     "bold-ui": "^1.0.0-beta.56",
-    "node-forge": "^1.3.1",
+    "jsencrypt": "^3.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
